Fix list text overflow

--- a/frontend/src/assets/stylus/app.styl
+++ b/frontend/src/assets/stylus/app.styl
@@ -12,3 +12,7 @@
 
 .logo-wrapper
   margin-bottom: 1rem
+
+td .list-item
+    height: 48px
+    overflow: hidden
